Set a path finder timeout to 1120ms, improved heuristic for serching for faster paths and added a debug message to say how much time was spent searching and executing the path